# Teaching-VMs-Subjective-Concepts-with-Language

./: .gitignore  Labeles.csv  README.md  baseline_results.json  celeba_baseline_results.json  celeba_embeddings.npz  create_celeba_subset.py  main.py  pyproject.toml  results.ipynb  results_improvement_analysis.csv  results_per_query.csv  results_summary_by_dataset.csv  results_summary_by_query_type.csv  stanford_dogs_baseline_results.json
.claude/: settings.local.json
data/: baseline_results.json  celeba_embeddings.npz  celeba_subset_metadata.json  data.txt  stanford_dogs_embeddings.npz  subset_metadata.json
data/stanford_dogs/: latent_representations.npz  stanford_dogs_embeddings.npz
data/task1_outputs/: baseline_retrieval_results.pkl  clip_embeddings.pt
models/: celeba_autoencoder.pt  flickr_autoencoder.pt  stanford_dogs_autoencoder.pt
models/autoencoder/: ae.pt  ae2.pt  reconstructions.npz
models/stanford_dogs/: mlp_ae.pt  sparse_ae.pt  vae.pt
scripts/: load_datasets.py  sample_images.py
task_notes/: objectives.md
